// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KvSelectOption (unit tests) when rendering with bottom slot flag \`true\` should match the snapshot 1`] = `
<kv-select-option has-bottom-slot="" label="Option 1" value="option1">
  <mock:shadow-root>
    <div class="has-bottom-slot select-option">
      <div class="text-container">
        <div class="item-label">
          Option 1
        </div>
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
</kv-select-option>
`;

exports[`KvSelectOption (unit tests) when rendering with default props when the component loads should match the snapshot 1`] = `
<kv-select-option label="Option 1" value="option1">
  <mock:shadow-root>
    <div class="select-option">
      <div class="text-container">
        <div class="item-label">
          Option 1
        </div>
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
</kv-select-option>
`;
